Handle error scenarios